BUG FIX | edit_with_polarr_floater x-scrollbar

--- a/wp-content/themes/ecp-child/amadded/assets/scss/plugins/_portfolio-slideshow.scss
+++ b/wp-content/themes/ecp-child/amadded/assets/scss/plugins/_portfolio-slideshow.scss
@@ -1,4 +1,7 @@
 /* _portfolio-slideshow.scss */
+#edit_with_polarr_floater {
+    display:none;
+}
 
 .ls-wrapper {
     border:1px solid #ddd;
